# scoppy-pico

./: README.md
pico/: CMakeLists.txt  pico-scoppy-cont-sampling.c  pico-scoppy-cont-sampling.h  pico-scoppy-core0-looper.c  pico-scoppy-core0-looper.h  pico-scoppy-ctx.c  pico-scoppy-ctx.h  pico-scoppy-experiments.pio  pico-scoppy-non-cont-sampling.c  pico-scoppy-non-cont-sampling.h  pico-scoppy-pwm-sig-gen.c  pico-scoppy-pwm-sig-gen.h  pico-scoppy-samples.c  pico-scoppy-samples.h  pico-scoppy-triggering.pio  pico-scoppy-util.c  pico-scoppy-util.h  pico-scoppy.c  pico-scoppy.h  scoppy-pio.c  scoppy-pio.h
pico/scoppy-usb/: CMakeLists.txt  scoppy_usb.c  scoppy_usb_descriptors.c
pico/scoppy-usb/include/: scoppy_usb.h  tusb_config.h
scoppy/lib/: CMakeLists.txt  scoppy-chunked-ring-buffer.c  scoppy-chunked-ring-buffer.h  scoppy-common.h  scoppy-context.h  scoppy-incoming.c  scoppy-incoming.h  scoppy-message.c  scoppy-message.h  scoppy-outgoing.c  scoppy-outgoing.h  scoppy-ring-buffer.c  scoppy-ring-buffer.h  scoppy-stdio.h  scoppy.c  scoppy.h
scoppy/lib/scoppy-util/: number.c  number.h
scoppy/test/: CMakeLists.txt  fake-serial.c  fake-serial.h  main.c  md5-test.c  scoppy-chunked-ring-buffer-test.c  scoppy-chunked-ring-buffer-test.h  scoppy-incoming-test.c  scoppy-incoming-test.h  scoppy-message-test.c  scoppy-message-test.h  scoppy-outgoing-test.c  scoppy-outgoing-test.h  scoppy-ring-buffer-test.c  scoppy-ring-buffer-test.h  scoppy-test.h  simul.c  simul.h
